fix article letter spacing

--- a/src/App.css
+++ b/src/App.css
@@ -51,4 +51,5 @@ article {
   font-size: 16px;
   color: #222;
   line-height: 30px;
+  margin-bottom: 30px;
 }
